tests/ui/feature-gates/feature-gate-diagnostic-on-const.stderr
error[E0277]: the trait bound `Foo: [const] PartialEq` is not satisfied
  --> $DIR/feature-gate-diagnostic-on-const.rs:12:5
   |
LL |     Foo == Foo;
   |     ^^^^^^^^^^
   |
note: trait `PartialEq` is implemented but not `const`
  --> $DIR/auxiliary/diagnostic-on-const.rs:4:1
   |
LL | impl PartialEq for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
